syntax = "proto3";

package broker;

message Void {
}

message TopicPartitions {
  string topic = 1;
  uint32 partitions = 2;
}

message CreateInput {
  repeated TopicPartitions topic_partitions = 1;
}

message ProducerInput {
  string topic = 1;
  uint32 partition = 2;
  bytes messages = 3;
}

message ConsumerInput {
  string topic = 1;
  uint32 partition = 2;
  uint64 offset = 3;
}

message ConsumerOutput {
  bytes messages = 1;
  bool end = 2;
}

service Broker {
  rpc create(CreateInput) returns (Void);
  rpc produce(ProducerInput) returns (Void);
  rpc consume(ConsumerInput) returns (stream ConsumerOutput);
}